--- a/customdeploy/pom.xml
+++ b/customdeploy/pom.xml
@@ -7,22 +7,40 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>customdeploy Maven Mojo</name>
 	<url>http://maven.apache.org</url>
-	  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<build>
+		<resources>
+			<resource>
+				<directory>resource/xslt</directory>
+			</resource>
+		</resources>
+	</build>
 	<dependencies>
 		<!-- dependencies to annotations -->
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
-			<version>2.0</version>
+			<version>3.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-project</artifactId>
+			<version>2.2.1</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven.plugin-tools</groupId>
 			<artifactId>maven-plugin-annotations</artifactId>
-			<version>3.4</version>
+			<version>3.5</version>
 			<scope>provided</scope>
 		</dependency>
-		 
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-archiver</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+
 	</dependencies>
 </project>
