--- a/test-customdeploy/pom.xml
+++ b/test-customdeploy/pom.xml
@@ -4,9 +4,10 @@
 		<groupId>fr.dilaw.mplugin</groupId>
 		<artifactId>parent-pom</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+
 	</parent>
-	<groupId>fr.dilaw.mplugin</groupId>
+	<groupId>fr.dilaw.mplugin-bus</groupId>
 	<artifactId>test-customplugin</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 </project>
